# psx-mini-launcher

./: CMakeLists.txt
data/: games.xml
src/: Button.cpp  Button.h  Connection.cpp  Connection.h  Defs.h  Game.cpp  Game.h  Image.cpp  Image.h  Label.cpp  Label.h  Launcher.cpp  Launcher.h  main.cpp
